--- a/js_tester1/textOrg.css
+++ b/js_tester1/textOrg.css
@@ -1,5 +1,15 @@
+html {
+    font-family: Arial, sans-serif;
+    font-size: 1.5em;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to bottom, #0000FF, #FFFFFF);
+}
+
 body {
-    background: linear-gradient(to bottom, #000000, #0000FF); /* I like gradient don't judge me */
+
+    color: #FFFFFF;
 }
 
 h1, h2 {
@@ -9,5 +19,5 @@ h1, h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100vh; 
 }
